objects/VPPSR_Result_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Search_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Result</label>
        <referenceTo>VPPSR_Search_Result__c</referenceTo>
        <relationshipName>Result_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>restriction_Detail__c</fullName>
        <label>restriction Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>result_Sequence_Number__c</fullName>
        <label>result Sequence Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPSSR Result Detail</label>
    <nameField>
        <displayFormat>VRDT-{000000}</displayFormat>
        <label>ResultDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Result Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>